# server

./: .bablerc  .c8rc.json  .codecov.yml  .deepsource.toml  .dockerignore  .env  .env.example  .envignore  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .eslintrc.json.old  .eslintrc.yml  .gitattributes  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .jshintrc  .mocharc.cjs  .mocharc.json  .npmrc  .pdm-python  .pnp.cjs  .pre-commit-config.yaml  .prettierrc  .renovaterc.json  .renovaterc.json5  .sentryclirc  .snyk  .taprc  .travis.yml  .yarnrc.yml  18621.clinic-doctor.html  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  Connection.js  Dockerfile  Dockerfile.database  (+96 more)
.changeset/: config.json  poor-nails-smoke.md  pre.json
.circleci/: config.yml
.dependencygraph/: setting.json
.github/: CODEOWNERS  codecov.yml  deadpendency.yaml  renovate.json5
.lift/: config.toml
18621.clinic-doctor/: 18621.clinic-doctor-processstat  18621.clinic-doctor-systeminfo  18621.clinic-doctor-traceevent
__tests__/: MessageNode.test.ts  TCPManager.test.ts  packet.test.ts
authlogin/: .coveragerc  .gitignore  Dockerfile  Makefile  authlogin.py  codecov.yml  pytest.ini  requirements.txt  server.conf  test_authlogin.py
config/: app-settings.js  app-settings.ts  app_settings.ini  config.d.ts  config.ts  config.yml  general.json  index.d.ts  index.js  index.ts  server.json
data/: cert.crt  cert.pem  default.conf  licenses.json  licenses.txt  mcouniverse.cnf  mcouniverse.crt  private_key.pem  pub.key  sessions.sql
docs/: architecture.md  (+5 more)
libs/serializable/: README.md  pyproject.toml
(+1995 files in other folders)
