[project]
name = "rusty-server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Molly Draven", email = "drazi@duck.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "AGPL-3.0"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/libs/serializable",
    "-e file:///${PROJECT_ROOT}/projects/main",
    "pre-commit>=3.7.1",
    "black>=24.4.2",
    "flake8>=7.1.0",
]
test = [
    "pytest>=8.2.2",
    "coverage>=7.5.3",
]
