[project]
name = "serializable"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Molly Draven", email = "drazi@duck.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "AGPL-3.0"}


[tool.pdm]
distribution = false
